--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'assets/scss/utils/variables';
+@import 'assets/scss/utils/fonts';
+
+@import 'assets/scss/atoms/button';
+@import 'assets/scss/atoms/toggle';
