Creando archivos utilitarios
Se crean archivos scss utiles

Se crean nuevos componentes: navbar, card, banner

Se crea un servicio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<button type="button" class="myButton__primary">PAGAR</button>
-<br>
-<div class="form-check form-check-inline">
-  <label for="inlineCheckbox1" class="form-check-label">Banco 1</label>
-  <input id="inlineCheckbox1" type="checkbox" data-toggle="toggle" class="form-check-input" checked data-on="Visible" data-off="Oculto" data-onstyle="myToggle__primary" data-style="ml-2" data-size="sm">
+<div class="cotainer">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-9"></div>
+  </div>
 </div>
