--- a/src/assets/scss/atoms/_button.scss
+++ b/src/assets/scss/atoms/_button.scss
@@ -5,6 +5,7 @@
   @include f-roboto;
   font-size: 14px;
   font-weight: 700;
+  border: none;
   border-radius: 5px;
   text-transform: uppercase;
   transition: 0.3s all ease-in;
