--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,77 @@
 /* You can add global styles to this file, and also import other style files */
-/* line 9, src/assets/scss/utils/_fonts.scss */
-label {
-  font-family: 'Lato', sans-serif;
+/* line 5, src/assets/scss/utils/_text.scss */
+.t-dark {
+  color: #252525;
 }
 
-/* line 17, src/assets/scss/atoms/_button.scss */
+/* line 9, src/assets/scss/utils/_text.scss */
+.t-light {
+  color: #989898;
+}
+
+/* line 13, src/assets/scss/utils/_text.scss */
+.t-blue {
+  color: #183F68;
+}
+
+/* line 36, src/assets/scss/utils/_fonts.scss */
+.t-bigger {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 41, src/assets/scss/utils/_fonts.scss */
+.t-big {
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 46, src/assets/scss/utils/_fonts.scss */
+.t-xnormal {
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 51, src/assets/scss/utils/_fonts.scss */
+.t-normal {
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 56, src/assets/scss/utils/_fonts.scss */
+.t-small {
+  font-size: 12px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 61, src/assets/scss/utils/_fonts.scss */
+.t-smaller {
+  font-size: 10px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 66, src/assets/scss/utils/_fonts.scss */
+label {
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 18, src/assets/scss/atoms/_button.scss */
 .myButton__primary {
   width: 90%;
   margin: 10px auto;
   padding: 10px 15px;
   font-family: 'Roboto', sans-serif;
+  word-break: break-word;
   font-size: 14px;
   font-weight: 700;
+  border: none;
   border-radius: 5px;
   text-transform: uppercase;
   transition: 0.3s all ease-in;
@@ -19,20 +79,80 @@ label {
   color: #fff;
 }
 
-/* line 11, src/assets/scss/atoms/_button.scss */
+/* line 12, src/assets/scss/atoms/_button.scss */
 .myButton__primary:hover {
   background-color: #133253;
   cursor: pointer;
 }
 
+/* line 1, src/assets/scss/atoms/_link.scss */
+.myLink {
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+  font-size: 12px;
+  transition: 0.5s all ease-in;
+}
+
+/* line 5, src/assets/scss/atoms/_link.scss */
+.myLink:hover {
+  text-decoration: none;
+}
+
 /* line 1, src/assets/scss/atoms/_toggle.scss */
-.btn-myToggle__primary {
+.myToggle__primary {
+  background-color: #E8E8E8;
+  color: #999999;
+}
+
+/* line 4, src/assets/scss/atoms/_toggle.scss */
+.myToggle__primary.active {
   background-color: #183F68;
   color: #fff;
 }
 
-/* line 4, src/assets/scss/atoms/_toggle.scss */
-.btn-myToggle__primary:hover {
-  background-color: #133253;
-  color: #fff;
+/* line 10, src/assets/scss/atoms/_toggle.scss */
+.myToggle__text {
+  font-size: 14px;
+}
+
+/* line 1, src/assets/scss/molecules/_swiper.scss */
+.swiper-container-c {
+  width: 100%;
+  height: 100%;
+  padding: 0px 0px 50px 0px;
+  overflow: hidden;
+}
+
+/* line 7, src/assets/scss/molecules/_swiper.scss */
+.swiper-container-c .swiper-slide {
+  width: auto;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* line 19, src/assets/scss/molecules/_swiper.scss */
+.swiper-container-c .swiper-button-next.round,
+.swiper-container-c .swiper-button-prev.round {
+  background-color: white;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+/* line 28, src/assets/scss/molecules/_swiper.scss */
+.swiper-container-c .swiper-button-next::after,
+.swiper-container-c .swiper-button-prev::after {
+  font-size: 14px;
+  font-weight: bold;
+  color: #183f68;
+}
+
+/* line 17, src/styles.scss */
+.myIcon {
+  color: #649EDB;
 }
