--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import 'assets/scss/utils/text';
 @import 'assets/scss/utils/fonts';
 @import 'assets/scss/utils/effects';
+@import 'assets/scss/utils/media';
 
 @import 'assets/scss/atoms/button';
 @import 'assets/scss/atoms/link';
