--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -1,7 +1,13 @@
-$c-myButton__primary: #183F68;
+$c-primary: #183F68;
+
+$c-myButton__primary: $c-primary;
 $t-myButton__primary: #fff;
 
 $c-myButton__primary--hover: darken($c-myButton__primary, 5%);
 
 $c-myButton__primary--disabled: #E8E8E8;
 $t-myButton__primary--disabled: #999999;
+
+$t-link__active: #D8E7F6;
+$t-link__inactive: #7786A2;
+$t-link__hover: #649EDB;
