Componente notification bar maquetado
Se maqueta la notification bar mobile first

Se agregan nuevas variables y efectos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="cotainer">
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 p-0">
       <app-notification-bar class="n-notification"></app-notification-bar>
       <app-navbar-desktop class="n-desktop"></app-navbar-desktop>
     </div>
