--- a/src/app/components/notification-bar/notification-bar.component.html
+++ b/src/app/components/notification-bar/notification-bar.component.html
@@ -1,2 +1,15 @@
-<p>notification-bar works!</p>
-<img src="assets/img/logo_aval_desktop.jpg" alt="">
+
+<div class="notification-bar">
+  <div class="logo">
+    <img src="assets/img/logo_aval_mobile.jpg" alt="">
+  </div>
+  <div class="notifications">
+    <div class="text t-normal">
+      Buenos días, John
+    </div>
+    <div class="icon">
+      <i class="far fa-bell fa-2x"></i>
+      <span class="badge noti-badge">4</span>
+    </div>
+  </div>
+</div>
