--- a/src/assets/scss/utils/_effects.scss
+++ b/src/assets/scss/utils/_effects.scss
@@ -2,6 +2,10 @@
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1);
 }
 
+@mixin shadowHard {
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.5);
+}
+
 @mixin transitionSoft {
   transition: 0.3s all ease-in;
 }
