Se finaliza responsive para navFooter
Se ajusta el responsive para el componente navFooter

Se centraliza las opciones de menu en un archivo aparte

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="cotainer">
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 p-0">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 pr-0">
       <app-notification-bar class="n-notification"></app-notification-bar>
       <app-navbar-desktop class="n-desktop"></app-navbar-desktop>
     </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 pr-0">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-12 col-sm-12 col-md-12 d-lg-none d-xl-none">
-      <app-navbar-tablet class="n-tablet"></app-navbar-tablet>
+    <div class="col-12 col-sm-12 col-md-12 d-lg-none d-xl-none pr-0">
+      <!-- <app-navbar-tablet class="n-tablet"></app-navbar-tablet> -->
       <app-navbar-mobile class="n-mobile"></app-navbar-mobile>
     </div>
   </div>
