--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -12,3 +12,5 @@ $t-myButton__primary--disabled: #999999;
 $t-link__active: #D8E7F6;
 $t-link__inactive: #7786A2;
 $t-link__hover: #649EDB;
+
+$c-navF__item--active: #21578F;
