--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
 @import 'assets/scss/atoms/toggle';
 
 @import 'assets/scss/molecules/swiper';
+@import 'assets/scss/molecules/navfooter';
 
 // @import 'app/app.component.scss';
 
