--- a/src/app/components/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/components/navbar-desktop/navbar-desktop.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="navbar__menu">
     <ul class="menu">
-      <li class="item" routerLinkActive="active" *ngFor="let menu of menus">
+      <li class="item" routerLinkActive="active" *ngFor="let menu of menuP">
         <a class="link" routerLink="{{menu.link}}">{{ menu.name }}</a>
         <span class="detail t-smaller">{{ menu.detail }}</span>
       </li>
