--- a/src/app/components/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/components/navbar-mobile/navbar-mobile.component.html
@@ -1,27 +1,27 @@
-<div class="navbar-tablet navFooter">
-  <div class="navFooter__item">
+<div class="navbar-mobile navFooter">
+  <div class="navFooter__item" routerLinkActive="active">
     <i class="fas fa-calendar-alt fa-2x ic"></i>
-    <a href="" class="name t-small">Organizador</a>
+    <a [routerLink]="'organizador'" class="name t-small">Organizador</a>
     <span class="detail t-smaller"></span>
   </div>
-  <div class="navFooter__item">
+  <div class="navFooter__item" routerLinkActive="active">
     <i class="fas fa-hand-holding-usd fa-2x ic"></i>
-    <a href="" class="name t-small">Pagos</a>
+    <a [routerLink]="'pagos'" class="name t-small">Pagos</a>
     <span class="detail t-smaller"></span>
   </div>
-  <div class="navFooter__item">
+  <div class="navFooter__item" routerLinkActive="active">
     <i class="fas fa-briefcase fa-2x ic"></i>
-    <a href="" class="name t-small">Productos</a>
+    <a [routerLink]="'productos'" class="name t-small">Productos</a>
     <span class="detail t-smaller"></span>
   </div>
-  <div class="navFooter__item">
+  <div class="navFooter__item" routerLinkActive="active">
     <i class="fas fa-exchange-alt fa-2x ic"></i>
-    <a href="" class="name t-small">Transferencias</a>
+    <a [routerLink]="'transferencias'" class="name t-small">Transferencias</a>
     <span class="detail t-smaller"></span>
   </div>
-  <div class="navFooter__item">
+  <div class="navFooter__item" routerLinkActive="active" (click)="showMenuFull()">
     <i class="fas fa-bars fa-2x ic"></i>
-    <a href="" class="name t-small">Más</a>
+    <a class="name t-small" >Más</a>
     <span class="detail t-smaller"></span>
   </div>
 </div>
