--- a/src/styles.css
+++ b/src/styles.css
@@ -294,7 +294,140 @@ label {
   text-decoration: none;
 }
 
+/* line 36, src/assets/scss/utils/_fonts.scss */
+.t-bigger {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 41, src/assets/scss/utils/_fonts.scss */
+.t-big {
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 46, src/assets/scss/utils/_fonts.scss */
+.t-xnormal {
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 51, src/assets/scss/utils/_fonts.scss */
+.t-normal {
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 56, src/assets/scss/utils/_fonts.scss */
+.t-small {
+  font-size: 12px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 61, src/assets/scss/utils/_fonts.scss */
+.t-smaller {
+  font-size: 10px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 66, src/assets/scss/utils/_fonts.scss */
+label {
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 7, src/assets/scss/molecules/_menufull.scss */
+.menu-full {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(24, 63, 104, 0.9);
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 15, src/assets/scss/molecules/_menufull.scss */
+.menu-full .head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+/* line 22, src/assets/scss/molecules/_menufull.scss */
+.menu-full .head .title {
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+  font-weight: 700;
+  color: white;
+}
+
+/* line 27, src/assets/scss/molecules/_menufull.scss */
+.menu-full .head .ic {
+  color: white;
+}
+
+/* line 31, src/assets/scss/molecules/_menufull.scss */
+.menu-full .menu-g {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 20px 10px;
+}
+
+/* line 35, src/assets/scss/molecules/_menufull.scss */
+.menu-full .menu-g .menu__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 20px 0px;
+  color: #D8E7F6;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 42, src/assets/scss/molecules/_menufull.scss */
+.menu-full .menu-g .menu__item .ic {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+/* line 50, src/assets/scss/molecules/_menufull.scss */
+.showMenu {
+  padding: 200px 40px !important;
+  height: 100%;
+  max-height: 100% !important;
+  overflow: hidden;
+  transition: 0.3s all ease-in;
+}
+
+/* line 58, src/assets/scss/molecules/_menufull.scss */
+.hideMenu {
+  padding: 0px 40px;
+  max-height: 0px;
+  transition: 0.3s all ease-in;
+}
+
 /* line 19, src/styles.scss */
+html, body {
+  width: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  padding: 0;
+}
+
+/* line 27, src/styles.scss */
 .myIcon {
   color: #649EDB;
 }
