--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,16 @@
 
 @import 'assets/scss/molecules/swiper';
 @import 'assets/scss/molecules/navfooter';
+@import 'assets/scss/molecules/menufull';
 
 // @import 'app/app.component.scss';
+html, body {
+  width: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  padding: 0;
+}
+
 
 .myIcon{
   color: #649EDB;
