--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -2,11 +2,17 @@
 @import '../../../assets/scss/utils/effects';
 @import '../../../assets/scss/utils/fonts';
 .myCard{
-  width: 250px;
+  width: 230px;
   display: flex;
   flex-direction: column;
   padding: 15px;
+  background-color: white;
   @include shadowSoft;
+  @include transitionSoft;
+  &:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 30px 2px rgba(0, 0, 0, 0.15);
+  }
   .myCard__head{
     display: flex;
     flex-direction: row;
@@ -18,6 +24,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
+    text-align: left;
     .myCard__title{
       margin-bottom: 15px;
     }
@@ -27,8 +34,9 @@
   .myCard__details--column{
     margin-bottom: 15px;
     @include d-flex-c;
+    text-align: left;
     .details-content{
-      display: inline-flex;
+      margin-bottom: 5px;
       *:first-child{
         margin-right: 5px;
       }
