--- a/src/app/components/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/components/navbar-desktop/navbar-desktop.component.html
@@ -1,13 +1,15 @@
 <div class="navbar-desktop">
-  <div class="navbar__logo">
-    <img src="assets/img/logo_aval_desktop.jpg" alt="">
-  </div>
-  <div class="navbar__menu">
-    <ul class="menu">
-      <li class="item" routerLinkActive="active" *ngFor="let menu of menuP">
-        <a class="link" routerLink="{{menu.link}}">{{ menu.name }}</a>
-        <span class="detail t-smaller">{{ menu.detail }}</span>
-      </li>
-    </ul>
+  <div class="navbar-desktop__content">
+    <div class="navbar__logo">
+      <img src="assets/img/logo_aval_desktop.jpg" alt="">
+    </div>
+    <div class="navbar__menu">
+      <ul class="menu">
+        <li class="item" routerLinkActive="active" *ngFor="let menu of menuP">
+          <a class="link" routerLink="{{menu.link}}">{{ menu.name }}</a>
+          <span class="detail t-smaller">{{ menu.detail }}</span>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
