--- a/src/app/components/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/components/navbar-desktop/navbar-desktop.component.scss
@@ -5,9 +5,12 @@
 
 .navbar-desktop {
   width: 100%;
-  height: 100vh;
-  @include d-flex-c;
+  height: 100%;
+  min-height: 100vh;
   background-color: $c-primary;
+  .navbar-desktop__content{
+    @include d-flex-c;
+  }
   .navbar__logo {
     margin-bottom: 20px;
     img {
