--- a/src/assets/scss/molecules/_menufull.scss
+++ b/src/assets/scss/molecules/_menufull.scss
@@ -7,10 +7,10 @@
 .menu-full{
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
-  background-color: transparentize($c-primary,0.1);
+  background-color: transparentize(#091827,0.03);
   @include d-flex-c;
   .head{
     @include d-flex-r;
@@ -26,6 +26,8 @@
     }
     .ic{
       color: white;
+      font-size: 25px;
+      transform: translateY(-40px);
     }
   }
   .menu-g{
@@ -35,20 +37,22 @@
     .menu__item{
       @include d-flex-r;
       justify-content: flex-start;
-      // align-items: center;
+      align-items: center;
       margin: 20px 0px;
-      color: $t-link__active;
+      color: $t-link__hover;
       @include f-lato;
       .ic{
-        font-size: 20px;
         margin-right: 10px;
+        @include bkp-xsmall(){
+          font-size: 25px;
+        }
       }
     }
   }
 }
 
 .showMenu{
-  padding: 200px 40px !important;
+  padding: 40% 40px 0px 40px !important;
   height: 100%;
   max-height: 100% !important;
   overflow: hidden;
