--- a/src/styles.css
+++ b/src/styles.css
@@ -102,15 +102,17 @@ label {
 .myToggle__primary {
   background-color: #E8E8E8;
   color: #999999;
+  border: 1px solid #999999;
 }
 
-/* line 4, src/assets/scss/atoms/_toggle.scss */
+/* line 5, src/assets/scss/atoms/_toggle.scss */
 .myToggle__primary.active {
   background-color: #183F68;
   color: #fff;
+  border: none;
 }
 
-/* line 10, src/assets/scss/atoms/_toggle.scss */
+/* line 12, src/assets/scss/atoms/_toggle.scss */
 .myToggle__text {
   font-size: 14px;
 }
@@ -346,10 +348,10 @@ label {
 .menu-full {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
-  background-color: rgba(24, 63, 104, 0.9);
+  background-color: rgba(9, 24, 39, 0.97);
   display: flex;
   flex-direction: column;
 }
@@ -376,9 +378,11 @@ label {
 /* line 27, src/assets/scss/molecules/_menufull.scss */
 .menu-full .head .ic {
   color: white;
+  font-size: 25px;
+  transform: translateY(-40px);
 }
 
-/* line 31, src/assets/scss/molecules/_menufull.scss */
+/* line 33, src/assets/scss/molecules/_menufull.scss */
 .menu-full .menu-g {
   display: flex;
   flex-direction: column;
@@ -386,40 +390,140 @@ label {
   margin: 20px 10px;
 }
 
-/* line 35, src/assets/scss/molecules/_menufull.scss */
+/* line 37, src/assets/scss/molecules/_menufull.scss */
 .menu-full .menu-g .menu__item {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: center;
   margin: 20px 0px;
-  color: #D8E7F6;
+  color: #649EDB;
   font-family: 'Lato', sans-serif;
   word-break: break-word;
 }
 
-/* line 42, src/assets/scss/molecules/_menufull.scss */
+/* line 44, src/assets/scss/molecules/_menufull.scss */
 .menu-full .menu-g .menu__item .ic {
-  font-size: 20px;
   margin-right: 10px;
 }
 
-/* line 50, src/assets/scss/molecules/_menufull.scss */
+@media only screen and (max-width: 576px) {
+  /* line 44, src/assets/scss/molecules/_menufull.scss */
+  .menu-full .menu-g .menu__item .ic {
+    font-size: 25px;
+  }
+}
+
+/* line 54, src/assets/scss/molecules/_menufull.scss */
 .showMenu {
-  padding: 200px 40px !important;
+  padding: 40% 40px 0px 40px !important;
   height: 100%;
   max-height: 100% !important;
   overflow: hidden;
   transition: 0.3s all ease-in;
 }
 
-/* line 58, src/assets/scss/molecules/_menufull.scss */
+/* line 62, src/assets/scss/molecules/_menufull.scss */
 .hideMenu {
   padding: 0px 40px;
   max-height: 0px;
   transition: 0.3s all ease-in;
 }
 
-/* line 19, src/styles.scss */
+/* line 36, src/assets/scss/utils/_fonts.scss */
+.t-bigger {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 41, src/assets/scss/utils/_fonts.scss */
+.t-big {
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  word-break: break-word;
+}
+
+/* line 46, src/assets/scss/utils/_fonts.scss */
+.t-xnormal {
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 51, src/assets/scss/utils/_fonts.scss */
+.t-normal {
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 56, src/assets/scss/utils/_fonts.scss */
+.t-small {
+  font-size: 12px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 61, src/assets/scss/utils/_fonts.scss */
+.t-smaller {
+  font-size: 10px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 66, src/assets/scss/utils/_fonts.scss */
+label {
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+}
+
+/* line 8, src/assets/scss/molecules/_topBar.scss */
+.topbar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* line 11, src/assets/scss/molecules/_topBar.scss */
+.topbar .menu-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* line 13, src/assets/scss/molecules/_topBar.scss */
+.topbar .menu-right .menu__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+}
+
+/* line 16, src/assets/scss/molecules/_topBar.scss */
+.topbar .menu-right .menu__item .ic {
+  margin-left: 10px;
+  font-size: 30px;
+}
+
+/* line 20, src/assets/scss/molecules/_topBar.scss */
+.topbar .menu-right .menu__item .noti-badge {
+  width: 20px;
+  padding: 3px;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+  font-weight: 400;
+  color: white;
+  border-radius: 100%;
+  background-color: #D12B0B;
+  transform: translateY(-5px);
+}
+
+/* line 21, src/styles.scss */
 html, body {
   width: 100%;
   height: 100vh;
@@ -427,7 +531,12 @@ html, body {
   padding: 0;
 }
 
-/* line 27, src/styles.scss */
+/* line 28, src/styles.scss */
+body {
+  background-color: #f2f2f2;
+}
+
+/* line 33, src/styles.scss */
 .myIcon {
   color: #649EDB;
 }
