--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import 'assets/scss/utils/fonts';
 @import 'assets/scss/utils/effects';
 @import 'assets/scss/utils/media';
+@import 'assets/scss/utils/mixins';
 
 @import 'assets/scss/atoms/button';
 @import 'assets/scss/atoms/link';
@@ -14,6 +15,7 @@
 @import 'assets/scss/molecules/swiper';
 @import 'assets/scss/molecules/navfooter';
 @import 'assets/scss/molecules/menufull';
+@import 'assets/scss/molecules/topBar';
 
 // @import 'app/app.component.scss';
 html, body {
@@ -21,6 +23,10 @@ html, body {
   height: 100vh;
   min-height: 100vh;
   padding: 0;
+}
+
+body{
+  background-color: #f2f2f2;
 }
 
 
