Ajustes para visibilidad de bancos
Se ajusta la forma de mostrar y ocultar las secciones de los bancos, elegidas por el usuario

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,3 +33,14 @@
     display: block;
   }
 }
+
+.content-view{
+  @include bkp-small(){
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+  }
+  @include bkp-xsmall(){
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+  }
+}
