--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid px-0 mx-0">
-  <div class="row mx-0">
+<div class="container-fluid">
+  <div class="row content-view">
 
     <div style="z-index: 52;" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 px-0">
       <app-notification-bar class="n-notification"></app-notification-bar>
@@ -10,10 +10,12 @@
       <router-outlet></router-outlet>
     </div>
 
+  </div>
+
+  <div class="row">
     <div style="z-index: 50;" class="col-12 col-sm-12 col-md-12 d-lg-none d-xl-none px-0">
       <app-navbar-mobile class="n-mobile"></app-navbar-mobile>
     </div>
-
     <div id="menu-full" style="z-index: 51;" class="menu-full hideMenu">
       <div class="head">
         <h3 class="title t-bigger">Más opciones</h3>
@@ -41,4 +43,5 @@
       </div>
     </div>
   </div>
+
 </div>
